# CircuitBench-An-Open-Benchmark-for-Surrogate-Models-in-Electrical-Circuit-Design

./: README.md  pyproject.toml  ruff.toml  tatus  tyle: format stats.py with black"
.github/: .last-build  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml
.github/workflows/: ci.yaml  ci.yml  ruff-fix.yml  tests.yml
datasets/: README.md
datasets/annotations/: dataset_card.md
datasets/api_examples/: dataset_card.md
datasets/cache/: dataset_card.md
datasets/download_scripts/: download_all.py
datasets/examples/: example_usage.ipynb
datasets/manifests/: checksum_manifest.yaml  dataset_catalog.yaml  dataset_index.json  dataset_registry.yaml  download_manifest.yaml  version_history.yaml
datasets/metadata/: contributors.yaml  datasets.yaml  dois.yaml  keywords.yaml  publications.yaml
datasets/reports/: data_quality_report.md  reproducibility_report.md  validation_report.md
datasets/tests/: dataset_card.md
datasets/validation/: run_validation.py  validate_checksums.py  validate_dataset.py  validate_metadata.py
datasets/version_history/: datasets_card.md
diagnostics/: black_errors.txt  flake8_errors.txt  ruff_errors.txt  syntax_errors.txt
docs/: benchmark_manifest.md  benchmark_specifications.md  circuit_registry.md  conf.py  governance.md
docs/api/: metrics.md  models.md  simulation.md  visualization.md
notebooks/: 10_Leaderboard_Analysis.ipynb  1_Getting_Started.ipynb  2_Loading_Datasets.ipynb  3_Running_SPICE_Simulations.ipynb  4_Training_Baseline_Models.ipynb  5_Evaluating_Models.ipynb  7_Hyperparameter_Optimization.ipynb
tests/: conftest.py  contest.py  test_benchmark.py  test_benchmark_runner.py  test_cli.py  test_datasets.py  test_explainability.py  test_io.py  test_utils.py  test_visualization.py
(+176 files in other folders)
